[artf1047] Added default task to documentation generation

--- a/doc/manual/build.xml
+++ b/doc/manual/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<project name="Aplaster - manual">
+<project name="Aplaster - manual" default="all">
   <xmlproperty file="../../properties.xml"/>
 
   <echo>${ant.project.name}</echo>
