--- a/monitor/monitor.cfg
+++ b/monitor/monitor.cfg
@@ -35,10 +35,10 @@
 -N"."
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib2;..\components\padcom;..\components\pxlib"
--O"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib2;..\components\padcom;..\components\pxlib"
--I"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib2;..\components\padcom;..\components\pxlib"
--R"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib2;..\components\padcom;..\components\pxlib"
+-U"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib\source;..\components\fastmm;..\components\pxlib;..\components\log4d"
+-O"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib\source;..\components\fastmm;..\components\pxlib;..\components\log4d"
+-I"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib\source;..\components\fastmm;..\components\pxlib;..\components\log4d"
+-R"c:\program files\borland\delphi7\Lib\Debug;..\common;..\components\uib\source;..\components\fastmm;..\components\pxlib;..\components\log4d"
 -w-SYMBOL_DEPRECATED
 -w-SYMBOL_LIBRARY
 -w-SYMBOL_PLATFORM
