--- a/server/aplasvr.cfg
+++ b/server/aplasvr.cfg
@@ -35,10 +35,10 @@
 -N"."
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"..\components\uib2;..\components\ps\source;..\components\pxlib"
--O"..\components\uib2;..\components\ps\source;..\components\pxlib"
--I"..\components\uib2;..\components\ps\source;..\components\pxlib"
--R"..\components\uib2;..\components\ps\source;..\components\pxlib"
+-U"..\components\uib\source;..\components\pascalscript\source;..\components\pxlib;..\components\pxvcl;..\components\synedit\source;..\components\log4d;..\components\fastmm;..\components\regexpr\source"
+-O"..\components\uib\source;..\components\pascalscript\source;..\components\pxlib;..\components\pxvcl;..\components\synedit\source;..\components\log4d;..\components\fastmm;..\components\regexpr\source"
+-I"..\components\uib\source;..\components\pascalscript\source;..\components\pxlib;..\components\pxvcl;..\components\synedit\source;..\components\log4d;..\components\fastmm;..\components\regexpr\source"
+-R"..\components\uib\source;..\components\pascalscript\source;..\components\pxlib;..\components\pxvcl;..\components\synedit\source;..\components\log4d;..\components\fastmm;..\components\regexpr\source"
 -w-SYMBOL_DEPRECATED
 -w-SYMBOL_LIBRARY
 -w-SYMBOL_PLATFORM
