--- a/module-sim/modsim.cfg
+++ b/module-sim/modsim.cfg
@@ -35,10 +35,10 @@
 -N"."
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"c:\program files\borland\delphi7\Lib\Debug"
--O"c:\program files\borland\delphi7\Lib\Debug"
--I"c:\program files\borland\delphi7\Lib\Debug"
--R"c:\program files\borland\delphi7\Lib\Debug"
+-U"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\log4d;..\components\pxlib"
+-O"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\log4d;..\components\pxlib"
+-I"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\log4d;..\components\pxlib"
+-R"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\log4d;..\components\pxlib"
 -DHOOK_LOADRESSTRING
 -w-SYMBOL_DEPRECATED
 -w-SYMBOL_LIBRARY
