--- a/psimp/psimp.cfg
+++ b/psimp/psimp.cfg
@@ -34,10 +34,10 @@
 -K$00400000
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"c:\program files\borland\delphi7\Lib\Debug"
--O"c:\program files\borland\delphi7\Lib\Debug"
--I"c:\program files\borland\delphi7\Lib\Debug"
--R"c:\program files\borland\delphi7\Lib\Debug"
+-U"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\pascalscript\source"
+-O"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\pascalscript\source"
+-I"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\pascalscript\source"
+-R"c:\program files\borland\delphi7\Lib\Debug;..\components\fastmm;..\components\pascalscript\source"
 -w-SYMBOL_DEPRECATED
 -w-SYMBOL_LIBRARY
 -w-SYMBOL_PLATFORM
