--- a/unit-tests/tests.cfg
+++ b/unit-tests/tests.cfg
@@ -33,10 +33,10 @@
 -K$00400000
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"..\common;..\cfged;..\server"
--O"..\common;..\cfged;..\server"
--I"..\common;..\cfged;..\server"
--R"..\common;..\cfged;..\server"
+-U"..\common;..\cfged;..\server;..\components\dunit\src;..\components\uib\source;..\components\pxvcl;..\components\pxlib;..\components\fastmm;..\components\log4d;..\components\synedit\source;..\components\pascalscript\source;..\components\regexpr\source"
+-O"..\common;..\cfged;..\server;..\components\dunit\src;..\components\uib\source;..\components\pxvcl;..\components\pxlib;..\components\fastmm;..\components\log4d;..\components\synedit\source;..\components\pascalscript\source;..\components\regexpr\source"
+-I"..\common;..\cfged;..\server;..\components\dunit\src;..\components\uib\source;..\components\pxvcl;..\components\pxlib;..\components\fastmm;..\components\log4d;..\components\synedit\source;..\components\pascalscript\source;..\components\regexpr\source"
+-R"..\common;..\cfged;..\server;..\components\dunit\src;..\components\uib\source;..\components\pxvcl;..\components\pxlib;..\components\fastmm;..\components\log4d;..\components\synedit\source;..\components\pascalscript\source;..\components\regexpr\source"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
