Made the project compile from command line

--- a/module/Makefile
+++ b/module/Makefile
@@ -4,12 +4,12 @@ clean:
 	rm -f *.o *.lst *.asm firmware.hex firmware.cod
 
 main.hex: main.o interrupt.o timer.o digin.o digout.o config.o
-	sdcc -mpic16 -p18f452 -o firmware.hex $^
+	sdcc --use-non-free -mpic16 -p18f452 -o firmware.hex $^
 
 .SUFFIXES: .c .o
 
 %.o:%.c
-	sdcc -c -mpic16 -p18f452 $^
+	sdcc --use-non-free -c -mpic16 -p18f452 $^
         
 
 
