--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ server/aplasvr.log
 server/aplasvr.mo
 server/aplasvr.pot
 unit-tests/tests.dll
+components/dunit/src/dunit-cli.exe
+setup/setup.exe
+unit-tests/tests.log
+module/*.asm
+module/*.lst
+module/*.o
+module/*.hex
+module/*.cod
